Add the try exception